[gd_scene load_steps=19 format=3 uid="uid://buksg42wk3ks8"]

[ext_resource type="Texture2D" uid="uid://ge5es2n71p8a" path="res://assets/images/button_up.png" id="1_4bypm"]
[ext_resource type="Texture2D" uid="uid://c2u4h0xjapwda" path="res://assets/images/button_down.png" id="2_8aosr"]
[ext_resource type="Texture2D" uid="uid://ejw8qxexvet5" path="res://assets/images/button_hover.png" id="3_c5ier"]
[ext_resource type="Texture2D" uid="uid://blk1gyun51gmr" path="res://assets/images/mode-logos/banner-gam.png" id="4_sp236"]
[ext_resource type="Script" path="res://scenes/GameBanner.gd" id="5_a5en4"]
[ext_resource type="Script" path="res://scenes/CategoryLabel.gd" id="5_k2a20"]
[ext_resource type="Script" path="res://scenes/ScoreLabel.gd" id="6_r5ha4"]
[ext_resource type="Script" path="res://scenes/MarginButtonContainer.gd" id="7_x4umu"]
[ext_resource type="Texture2D" uid="uid://b2x1wdf1a4e72" path="res://assets/images/color_button_grey_up.png" id="8_snd7p"]
[ext_resource type="Texture2D" uid="uid://deqa1b6et73te" path="res://assets/images/color_button_red_down.png" id="9_h8sc1"]
[ext_resource type="Script" path="res://scenes/RedButton.gd" id="10_y6jeg"]
[ext_resource type="Texture2D" uid="uid://byqk1kfw1wlvj" path="res://assets/images/button_knife.png" id="11_mg33i"]
[ext_resource type="Script" path="res://scenes/StrikesLabel.gd" id="12_dxqgl"]
[ext_resource type="Script" path="res://scenes/SpacerLabel.gd" id="13_uo0il"]
[ext_resource type="Script" path="res://scenes/gameboard.gd" id="14_hou3y"]

[sub_resource type="Theme" id="Theme_tvs64"]

[sub_resource type="Gradient" id="Gradient_bxuew"]
offsets = PackedFloat32Array(0, 0.998435)
colors = PackedColorArray(0.976471, 1, 0.596078, 1, 0.94902, 0.94902, 0.94902, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p7vrv"]
gradient = SubResource("Gradient_bxuew")
fill_from = Vector2(0, 0.8)
fill_to = Vector2(0, 1)
metadata/_snap_enabled = true

[node name="Control" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_tvs64")
color = Color(0.94902, 0.94902, 0.94902, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 900.0
offset_bottom = 1100.0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Gradient" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
texture = SubResource("GradientTexture2D_p7vrv")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Gradient"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
offset_right = 900.0
offset_bottom = 200.0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/Gradient/HBoxContainer"]
custom_minimum_size = Vector2(250, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Back" type="TextureButton" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_4bypm")
texture_pressed = ExtResource("2_8aosr")
texture_hover = ExtResource("3_c5ier")
ignore_texture_size = true

[node name="GameBanner" type="TextureRect" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("4_sp236")
expand_mode = 2
stretch_mode = 5
script = ExtResource("5_a5en4")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Gradient/HBoxContainer"]
custom_minimum_size = Vector2(250, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Spacer1" type="Container" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CategoryLabel" type="Label" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "CATEGORY: N/A"
script = ExtResource("5_k2a20")

[node name="ScoreLabel" type="Label" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SCORE: N/A"
script = ExtResource("6_r5ha4")

[node name="Spacer2" type="Container" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginButtonContainer" type="MarginContainer" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 75
script = ExtResource("7_x4umu")

[node name="RedButton" type="TextureButton" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer/MarginButtonContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("8_snd7p")
texture_pressed = ExtResource("9_h8sc1")
texture_disabled = ExtResource("8_snd7p")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("10_y6jeg")

[node name="StrikesBox" type="HBoxContainer" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer/MarginButtonContainer"]
layout_mode = 2
mouse_filter = 2

[node name="KnifeIcon" type="TextureRect" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer/MarginButtonContainer/StrikesBox"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("11_mg33i")
stretch_mode = 5

[node name="LabelMargin" type="MarginContainer" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer/MarginButtonContainer/StrikesBox"]
layout_mode = 2
mouse_filter = 2

[node name="StrikesLabel" type="Label" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer/MarginButtonContainer/StrikesBox/LabelMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "STRIKES: N/A"
script = ExtResource("12_dxqgl")

[node name="SpacerLabel" type="Label" parent="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.74902, 0, 0, 1)
layout_mode = 2
size_flags_vertical = 3
text = "You may strike up to X tiles"
script = ExtResource("13_uo0il")

[node name="BoardBorder" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GameBoard" type="GridContainer" parent="VBoxContainer/BoardBorder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3
script = ExtResource("14_hou3y")

[connection signal="pressed" from="VBoxContainer/Gradient/HBoxContainer/MarginContainer2/VBoxContainer/Back" to="VBoxContainer/BoardBorder/GameBoard" method="_on_back_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer/MarginButtonContainer/RedButton" to="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer/MarginButtonContainer/RedButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer/MarginButtonContainer/RedButton" to="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer/MarginButtonContainer/RedButton" method="_on_mouse_exited"]
[connection signal="toggled" from="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer/MarginButtonContainer/RedButton" to="VBoxContainer/Gradient/HBoxContainer/MarginContainer/VBoxContainer/MarginButtonContainer/RedButton" method="_on_toggled"]
